# uniparser-grammar-albanian

./: .gitignore  LICENSE  LICENSE.md  MANIFEST.in  README.md  albanian_disambiguation.cg3  paradigms.txt  pre_build.py  setup.cfg  sqi_derivations.txt  sqi_lexemes_A.txt  sqi_lexemes_N.txt  sqi_lexemes_V.txt  sqi_lexemes_rest.txt
analyzer/: clitic_inserter.py  derivations.txt
analyzer/UniParser/: analyze.py
finalizer/: derivations.txt  gramm_finalizer.py  paradigms.txt
uniparser_albanian/: __init__.py
wordlists/: unanalyzed_wordlist.txt  wordlist_unanalyzed.txt  xml2conll.py
