[metadata]
name = uniparser-albanian
version = 2.3.0
author = Timofey Arkhangelskiy
author_email = timarkh@gmail.com
description = Rule-based morphological analysis for Albanian
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timarkh/uniparser-grammar-albanian
project_urls =
    Bug Tracker = https://github.com/timarkh/uniparser-grammar-albanian/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Text Processing :: Linguistic

[options]
packages = find:
python_requires = >=3.7
install_requires =
	uniparser-morph>=2.9.4
	importlib-resources
include_package_data = True
